--- a/packages/ui/react-ui-theme/src/styles/layers/tag.css
+++ b/packages/ui/react-ui-theme/src/styles/layers/tag.css
@@ -6,16 +6,9 @@
 
 @layer dx-components {
   .dx-tag {
-    @apply inline-block text-xs font-semibold mli-0.5 pli-1 rounded-sm cursor-default truncate;
+    @apply inline-block text-xs font-semibold m-0.5 pli-1 rounded-sm cursor-default truncate;
     padding-block: var(--dx-tag-padding-block);
     user-select: none;
-
-    .dx-grid__cell__content:has(&) {
-      @apply flex flex-wrap;
-      .dx-tag {
-        @apply shrink-0;
-      }
-    }
   }
 
   .dx-tag[data-hue='neutral'],
